--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "bootstrap-vue-3": "^0.5.1",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
